--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    background-color: #F2F2F5;
+}
+
+body {
+    background-color: #DDE1E7;
 }
 
 ul {
@@ -21,13 +24,64 @@ li {
 hr {
     border: none;
     height: 2px;
-    background: linear-gradient(to right, #5A5A5A, #222831);
+    background: linear-gradient(to right, #B0B5BF, #8A8F99, #B0B5BF);
     border-radius: 3px;
+}
+
+h1 {
+    font-size: 56px;
+    color: #3969C6;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+h2 {
+    font-size: 32px;
+    margin-bottom: 32px;
+    text-align: center;
+}
+
+img {
+    width: 100%;
+    padding: 20px;
+}
+
+.btn {
+    background-color: #3A86FF;
+    color: #DDE1E7;
+    padding: 12px 24px;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 4px;
+    border: none;
+}
+
+.header__img--wrapper {
+    padding: 20px;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:active {
+    transform: translateY(1px);
+}
+
+.container {
+    padding: 56px 0;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 /* NAV */
 
 nav {
+    width: 100%;
     height: 64px;
     display: flex;
 }
@@ -42,6 +96,10 @@ nav {
     padding: 0 24px;
 }
 
+.text--purple {
+    color: #3969C6;
+}
+
 .nav__logo {
     width: 160px;
 }
@@ -53,10 +111,15 @@ nav {
     font-weight: bold;
     color: #222831;
     padding: 4px 12px;
+    transition: color 300ms ease-in-out;
+}
+
+.nav__links {
+    display: flex;
 }
 
 .nav__link:hover {
-    color: #E63946;
+    color: #3969C6;
     transition: all 300ms ease;
 }
 
@@ -64,4 +127,84 @@ nav {
     border: 2px solid;
     border-radius: 24px;
     background-color: #E4E6EB;
+}
+
+#landing {
+    background: linear-gradient(135deg, #BFC5D2, #90949E);
+}
+
+/* BODY */
+
+.header__container {
+    width: 100%;
+    max-width: 720px;
+    text-align: center;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-top: 68px;
+}
+
+/* HIGHLIGHTS */
+
+.highlight__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    gap: 32px;
+}
+
+.highlight {
+    flex: 1 1 280px;
+    max-width: 300px;
+    min-height: 250px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 24px;
+    border: solid 2px #3969C6;
+    border-radius: 12px;
+}
+
+.highlight i {
+    font-size: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px; /* Ensure all icons take the same vertical space */
+}
+
+.highlight__para {
+    padding-top: 4px;
+    text-align: center;
+    max-width: 200px;
+    flex-grow: 1;
+}
+
+.fa-bolt-lightning,
+.fa-book-open,
+.fa-tags {
+    font-size: 64px;
+    padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.highlight__subtitle {
+    padding-bottom: 24px;
+}
+
+.fa-book-open {
+    padding-bottom: 64px;
 }
