--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap');
 
-/* MAKE A DARK THEME SLIDER */
+html, body {
+    overflow-x: hidden;
+}
 
 * {
     padding: 0;
@@ -14,11 +16,7 @@ body {
 }
 
 ul {
-    display: flex;
-}
-
-li {
-    list-style-type: none;
+    list-style: none;
 }
 
 hr {
@@ -28,62 +26,16 @@ hr {
     border-radius: 3px;
 }
 
-h1 {
-    font-size: 56px;
-    color: #3969C6;
-    text-align: center;
-    margin-bottom: 24px;
-}
-
-h2 {
-    font-size: 32px;
-    margin-bottom: 32px;
-    text-align: center;
-}
-
-img {
-    width: 100%;
-    padding: 20px;
-}
-
-.btn {
-    background-color: #3A86FF;
-    color: #DDE1E7;
-    padding: 12px 24px;
-    font-size: 20px;
-    font-weight: 700;
-    border-radius: 4px;
-    border: none;
-}
-
-.header__img--wrapper {
-    padding: 20px;
-}
-
-button {
-    cursor: pointer;
-}
-
-button:active {
-    transform: translateY(1px);
-}
-
-.container {
-    padding: 56px 0;
-}
-
-.row {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+#features, #recent {
+    min-height: 600px; /* Or adjust as needed */
 }
 
 /* NAV */
-
-nav {
+.nav {
     width: 100%;
     height: 64px;
     display: flex;
+    background-color: #BFC5D2;
 }
 
 .nav__container {
@@ -96,12 +48,12 @@ nav {
     padding: 0 24px;
 }
 
-.text--purple {
-    color: #3969C6;
-}
-
 .nav__logo {
     width: 160px;
+}
+
+.nav__links {
+    display: flex;
 }
 
 .nav__link {
@@ -114,13 +66,8 @@ nav {
     transition: color 300ms ease-in-out;
 }
 
-.nav__links {
-    display: flex;
-}
-
 .nav__link:hover {
     color: #3969C6;
-    transition: all 300ms ease;
 }
 
 .nav__link--primary {
@@ -129,25 +76,101 @@ nav {
     background-color: #E4E6EB;
 }
 
-#landing {
-    background: linear-gradient(135deg, #BFC5D2, #90949E);
+/* SECTIONS */
+.section:nth-of-type(even) {
+    background-color: #E8EAF0;
 }
 
-/* BODY */
+.section:nth-of-type(odd) {
+    background-color: #DCE0E6;
+}
+
+.section__title {
+    padding-top: 32px;
+}
+
+/* HEADERS */
+
+.header {
+    position: relative;
+    z-index: 2;
+}
 
 .header__container {
     width: 100%;
     max-width: 720px;
     text-align: center;
     margin: 0 auto;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding-top: 68px;
+    padding: 68px 0;
+    z-index: 3;
+}
+
+.header__img--wrapper img {
+    max-width: 100%;
+    height: auto;
+}
+
+.text--primary {
+    color: #3969C6;
+}
+
+h1 {
+    font-size: 56px;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+h2 {
+    font-size: 32px;
+    margin-bottom: 32px;
+    text-align: center;
+}
+
+/* BUTTON */
+
+.btn {
+    background-color: #3A86FF;
+    color: #DDE1E7;
+    padding: 12px 24px;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 300ms ease-in-out;
+}
+
+.btn:hover {
+    background-color: #0041c4;
+}
+
+button:active {
+    transform: translateY(1px);
 }
 
 /* HIGHLIGHTS */
+
+#highlights {
+    position: relative;
+    z-index: 1;
+    min-height: 400px;
+}
+
+#highlights:before {
+    background: url('assets/wave.svg');
+    content: "";
+    position: absolute;
+    z-index: 1;
+    width: 100vw;
+    height: 12vw;
+    top: 1px;
+    left: 0;
+    z-index: -1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(-100%);
+    filter: invert(40%) sepia(10%) saturate(150%) hue-rotate(180deg) brightness(144%);
+}
 
 .highlight__wrapper {
     display: flex;
@@ -165,7 +188,6 @@ nav {
     flex: 1 1 280px;
     max-width: 300px;
     min-height: 250px;
-    height: 250px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -176,12 +198,16 @@ nav {
     border-radius: 12px;
 }
 
-.highlight i {
+.highlight__icon {
     font-size: 64px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px; /* Ensure all icons take the same vertical space */
+    color: #3969C6;
+    margin-bottom: 20px;
+}
+
+.highlight__subtitle {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 12px;
 }
 
 .highlight__para {
@@ -191,20 +217,16 @@ nav {
     flex-grow: 1;
 }
 
-.fa-bolt-lightning,
-.fa-book-open,
-.fa-tags {
-    font-size: 64px;
-    padding-bottom: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+/* CONTAINERS */
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 16px;
 }
 
-.highlight__subtitle {
-    padding-bottom: 24px;
-}
-
-.fa-book-open {
-    padding-bottom: 64px;
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
