--- a/style.css
+++ b/style.css
@@ -412,3 +412,55 @@ button:active {
     width: 160px;
     margin-bottom: 12px;
 }
+
+/* RESPONSIVE */
+
+@media (max-width: 768px) {
+
+    h1 {
+        font-size: 64px;
+    }
+
+    .nav {
+        width: 100%;
+    }
+
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        width: 600px;
+    }
+
+    .books {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 24px;
+    }
+
+    .nav {
+        max-width: 100%;
+    }
+
+    .nav__links {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+}
