--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 html, body {
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 * {
@@ -42,6 +43,10 @@ hr {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.no-cursor {
+    cursor: not-allowed;
 }
 
 /* NAV */
@@ -271,6 +276,7 @@ button:active {
     min-width: 200px;
     max-width: 280px;
     flex-grow: 1;
+    transition: all 300ms ease;
 }
 
 .book__img {
@@ -411,6 +417,12 @@ button:active {
 .footer__logo {
     width: 160px;
     margin-bottom: 12px;
+    filter: grayscale(1) invert(1);
+}
+
+.footer__copyright {
+    color: #B0B5BF;
+    padding-top: 24px;
 }
 
 /* RESPONSIVE */
