--- a/style.css
+++ b/style.css
@@ -313,9 +313,36 @@ button:active {
   padding: 8vw;
 }
 
+#books__main {
+  flex: 1;
+}
+
+.books__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 24px;
+}
+
+.books__header--title {
+  margin-bottom: 0;
+}
+
+select {
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  border: 1px solid #DCE0E6;
+  color: #2C2F33;
+  height: 40px;
+  line-height: 48px;
+  outline: none;
+  padding: 0 16px;
+  width: 100%;
+  max-width: 200px;
+}
+
 .books {
   display: flex;
-  justify-content: center;
   align-items: flex-start;
   gap: 24px;
   max-width: 1200px;
